<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZoteroApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="et_username">username</string>
    <string name="et_password">password</string>
    <string name="bttn_login">login</string>
    <string name="bttn_next">next page</string>
    <string name="new_Intent">new intent enable</string>
    <string name="verfication_code">verification code</string>
    <string name="collection_label">Collections</string>
    <string name="item_label">Items</string>
    <string name="bttn_expandList">View Library</string>
    <string name="Info_Tab">Information</string>
    <string name="Note_Tab">Notes</string>
    <string name="label_type">Type :</string>
    <string name="label_url">URL :</string>
    <string name="label_author">Author :</string>
    <string name="label_abstract">Abstract Note :</string>

</resources>
